--- a/app/src/main/res/layout/fragment_articles.xml
+++ b/app/src/main/res/layout/fragment_articles.xml
@@ -5,4 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ArticlesFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/articlesRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="70dp"/>
+
 </FrameLayout>
