--- a/app/src/main/res/layout/fragment_article_info.xml
+++ b/app/src/main/res/layout/fragment_article_info.xml
@@ -17,16 +17,17 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="24dp"
             android:textSize="26sp"
+            android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:text="text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewText"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20dp"
+            android:paddingEnd="20dp"
             app:layout_constraintTop_toBottomOf="@+id/imageViewArticle"
             android:layout_marginTop="20dp" />
 
@@ -38,13 +39,13 @@
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             tools:src="@tools:sample/avatars"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
+            android:layout_marginTop="40dp" />
 
         <TextView
-            android:text="text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewDate"
